--- a/wstfoodsever/src/main/resources/application.properties
+++ b/wstfoodsever/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 ## Mybatis ≈‰÷√
 mybatis.typeAliasesPackage=com.wst.wstfoodsever.dao
 mybatis.mapperLocations=classpath:mapper/*.xml
+
+user.name=huqingning
